# QGIS

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile-PyQgis  qgis-test-travis.ctest  vcpkg.json
.github/workflows/: sync_branches.yml  vcpkg.yaml
ci/: Dockerfile
cmake/: FindPyQt5.py  FindPythonLibrary.cmake  FindQCA.cmake  FindQScintilla.cmake  FindSPATIALITE.cmake  PyQt5Macros.cmake  SIPMacros.cmake  UsePythonTest.cmake
doc/: CMakeLists.txt  CODING.html  CODING.t2t  linux.t2t
images/: images.qrc
ms-windows/osgeo4w/: creatensis.pl  package-nightly.cmd
python/: CMakeLists.txt
python/core/: __init__.py  core.sip  qgsdataprovider.sip  qgseditformconfig.sip  qgsfield.sip  qgsmultirenderchecker.sip  qgsvectorlayer.sip
python/gui/: gui.sip  gui_auto.sip  qgisinterface.sip
python/testing/: __init__.py
rpm/: .gitignore  qgis.spec
scripts/: pyuic-wrapper.sh
src/: CMakeLists.txt
src/analysis/: CMakeLists.txt  qgsanalysis.cpp
src/app/: CMakeLists.txt  main.cpp  qgisapp.cpp  qgisapp.h  qgisappinterface.cpp  qgisappinterface.h  qgsattributetypedialog.cpp  qgsattributetypedialog.h  qgsclipboard.cpp  qgsfeatureaction.cpp  qgsfieldsproperties.cpp  qgsgeometryvalidationdock.cpp  qgsidentifyresultsdialog.cpp  qgsidentifyresultsdialog.h  qgslabelingwidget.cpp  qgsmaptoolannotation.cpp  qgsmaptooloffsetcurve.cpp  qgsoptions.cpp  qgsprojectproperties.cpp  qgsrasterlayerproperties.cpp  qgstipfactory.h  (+3 more)
src/mobileapp/: CMakeLists.txt  main.cpp  qgismobileapp.cpp  qgismobileapp.h  qml.qrc
src/mobileapp/qml/: ActionButton.qml  DialogTitle.qml  HoloDark.qml  MapPage.qml  MapPage.qml.autosave  Menu.qml  OpaqueBackground.qml  ToolButton.qml  qgismobileapp.qml
(+461 files in other folders)
