SET(QGIS_MOBILEAPP_NAME ${QGIS_APP_NAME}_mobile)

SET(QGIS_MOBILEAPP_SRCS
  main.cpp
  qgismobileapp.cpp
  qgsmapcanvasproxy.cpp
)

SET(QGIS_MOBILEAPP_HDRS
  qgismobileapp.h
  qgsmapcanvasproxy.h
)

SET(QGIS_MOBILEAPP_MOC_HDRS
  qgismobileapp.h
  qgsmapcanvasproxy.h
)

SET(IMAGE_RCCS qml.qrc)
QT4_ADD_RESOURCES(IMAGE_RCC_SRCS ${IMAGE_RCCS})
QT4_WRAP_CPP(QGIS_MOBILEAPP_MOC_SRCS ${QGIS_MOBILEAPP_MOC_HDRS})


INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}/../ui
  ../gui
  ../gui/attributetable
  ../core
  ../core/raster
  ${Qt5Declarative_INCLUDE_DIRS}
)

FIND_PACKAGE(Qt5Declarative REQUIRED)


IF (ANDROID)
  ADD_LIBRARY(${QGIS_MOBILEAPP_NAME} SHARED ${QGIS_MOBILEAPP_SRCS} ${QGIS_MOBILEAPP_MOC_SRCS} ${INDEX_SRC} ${QGIS_MOBILEAPP_HDRS} ${QGIS_MOBILEAPP_MOC_HDRS} ${IMAGE_RCC_SRCS})
ELSE (ANDROID)
  ADD_EXECUTABLE(${QGIS_MOBILEAPP_NAME} MACOSX_BUNDLE WIN32 ${QGIS_MOBILEAPP_SRCS} ${QGIS_MOBILEAPP_MOC_SRCS} ${IMAGE_RCC_SRCS})
ENDIF (ANDROID)

TARGET_LINK_LIBRARIES(${QGIS_MOBILEAPP_NAME}
  ${Qt5Declarative_LIBRARIES}
  # ${QWT_LIBRARY}
  # ${QT_QTSQL_LIBRARY}
  # ${QT_QTUITOOLS_LIBRARY}
  # ${QT_QTWEBKIT_LIBRARY}
  # #should only be needed for win
  # ${QT_QTMAIN_LIBRARY}
  # ${QWTPOLAR_LIBRARY}
  # ${GDAL_LIBRARY}
  qgis_core
  qgis_gui
  # qgis_analysis
)

INSTALL(TARGETS ${QGIS_MOBILEAPP_NAME}
  BUNDLE DESTINATION ${QGIS_INSTALL_PREFIX}
  RUNTIME DESTINATION ${QGIS_BIN_DIR}
  LIBRARY DESTINATION ${QGIS_LIB_DIR}
  ARCHIVE DESTINATION ${QGIS_LIB_DIR}
  FRAMEWORK DESTINATION ${QGIS_FW_SUBDIR}
  PUBLIC_HEADER DESTINATION ${QGIS_INCLUDE_DIR}
)

